[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/background/industrial-background.jpg" type="Texture" id=1]
[ext_resource path="res://assets/button/Asset 9.png" type="Texture" id=2]
[ext_resource path="res://assets/button/Asset 3.png" type="Texture" id=3]
[ext_resource path="res://assets/button/Asset 6.png" type="Texture" id=4]
[ext_resource path="res://src/UserInterface/FirstMenu/FirstMenu.gd" type="Script" id=5]
[ext_resource path="res://assets/logo/logo_first_menu.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 30 )

[node name="FirstMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 344.073 ],
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.584314 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
margin_bottom = 3.05176e-05
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = -147.82
margin_right = 147.0
margin_bottom = 52.1799
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -117.0
margin_top = -197.818
margin_right = 117.0
margin_bottom = -99.8175
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchPlay" type="TouchScreenButton" parent="Menu"]
position = Vector2( 84, 32 )
normal = ExtResource( 2 )
shape = SubResource( 1 )

[node name="TouchSettings" type="TouchScreenButton" parent="Menu"]
position = Vector2( 0, 32 )
normal = ExtResource( 3 )
shape = SubResource( 2 )

[node name="TouchQuit" type="TouchScreenButton" parent="Menu"]
position = Vector2( 168, 32 )
normal = ExtResource( 4 )
shape = SubResource( 3 )
[connection signal="pressed" from="Menu/TouchPlay" to="." method="_on_TouchPlay_pressed"]
[connection signal="pressed" from="Menu/TouchSettings" to="." method="_on_TouchSettings_pressed"]
[connection signal="pressed" from="Menu/TouchQuit" to="." method="_on_TouchQuit_pressed"]
